--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,22 @@
+@import url('./fonts.css');
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+p {
+    font-size: 16px;
+    font-weight: 400;
+    /* text-align: justify; */
+}
+
 a,
 a:hover {
     color: #003855
+}
+
+a {
+    text-decoration: none;
 }
 
 .lightbg {
@@ -9,6 +25,16 @@ a:hover {
 
 .navbarheader {
     height: 80px;
+}
+
+@media (max-width:786px) {
+    .navbarheader {
+        height: auto;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        line-height: 20px !important;
+    }
 }
 
 .blurbgwhite {
@@ -282,7 +308,7 @@ a:hover {
     position: relative;
     overflow: hidden;
     z-index: 5;
-    cursor: pointer
+    cursor: pointer;
 }
 
 .fh5co_latest_trading_img_position_absolute {
@@ -532,7 +558,8 @@ a:hover {
 .fh5co_magna {
     font-size: 16px;
     color: #222 !important;
-    font-weight: 800
+    font-weight: 600;
+    display: block;
 }
 
 .fh5co_mini_time {
@@ -592,7 +619,7 @@ a:hover {
     background: #f1f1f1;
     padding: 12px 20px;
     color: #222 !important;
-    font-weight: 800;
+    font-weight: 600;
     margin: 0 10px;
     -moz-transition: all .5s ease;
     -o-transition: all .5s ease;
@@ -605,7 +632,7 @@ a:hover {
     background: #f1f1f1 !important;
     color: #222;
     padding: 12px 20px !important;
-    font-weight: 800;
+    font-weight: 600;
     margin: 0 10px;
     -moz-transition: all .5s ease;
     -o-transition: all .5s ease;
@@ -618,7 +645,7 @@ a:hover {
 .btn_mange_pagging:focus {
     background: #222;
     color: #fff !important;
-    font-weight: 800
+    font-weight: 600
 }
 
 .btn_pagging:hover,
@@ -640,7 +667,7 @@ a:hover {
 
 .footer_main_title {
     color: #fff;
-    font-weight: 800;
+    font-weight: 600;
     font-size: 18px
 }
 
@@ -792,7 +819,7 @@ a:hover {
 .fh5co_con {
     font-size: 24px;
     color: #fff;
-    font-weight: 800;
+    font-weight: 600;
     text-decoration: none;
     -moz-transition: all .5s ease;
     -o-transition: all .5s ease;
@@ -806,7 +833,7 @@ a:hover {
     text-decoration: none;
     font-size: 24px;
     color: #003855;
-    font-weight: 800
+    font-weight: 600
 }
 
 .fh5co_con_123 {
@@ -1076,7 +1103,9 @@ a:hover {
 
 #fh5co-title-box {
     width: 38.2%;
-    z-index: 555;
+    /* z-index: 555; */
+
+
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center
@@ -1149,3 +1178,19 @@ a:hover {
 }
 
 /*# sourceMappingURL=style_1.css.map */
+
+/* Style */
+.trendingNews {
+    padding: 30px 20px;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.tags {
+    font-size: 25px;
+    width: 100%;
+    color: #003855;
+    border-bottom: 1px solid #003855;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
