--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,15 @@ a:hover {
     transform: scale(1.05);
 }
 
+.fh5co_tagg:hover {
+    color: #fff !important;
+}
+
+.fh5co_tagg.active {
+    color: #fff !important;
+    background-color: #003855;
+}
+
 a {
     text-decoration: none;
     cursor: pointer;
@@ -37,6 +46,11 @@ a {
     .navbar-light .navbar-nav .nav-link {
         line-height: 20px !important;
     }
+}
+
+.navbar-nav button {
+    border: 0;
+    background-color: transparent;
 }
 
 .blurbgwhite {
@@ -1194,4 +1208,41 @@ a {
     border-bottom: 1px solid #003855;
     padding-bottom: 10px;
     margin-bottom: 20px;
+}
+
+.imgDiv {
+    width: 100%;
+    height: 60px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.imgDiv img {
+    width: 100%;
+    height: 100%;
+}
+
+.notFound {
+    width: 100%;
+    height: 420px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* news feed */
+.newsfeed {
+    height: 600px;
+    overflow-y: auto;
+    padding: 10px;
+}
+
+.newsfeed::-webkit-scrollbar {
+    display: none;
+}
+
+.newsfeed {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
